# PerfDigest-MCP

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: INIT_PROMPT.md  clients.md
eval/: CROSS_BACKEND_2026-06-15.md  README.md  RESULTS.md
eval/bench/: README.md  cpu_bench.c  gpu_bench.cu
perfdigest/: .gitignore  .mcp.json  CLAUDE.md
perfdigest/docs/: clients.md
perfdigest/eval/: RESULTS.md  run_ab.ps1
perfdigest/src/perfdigest/core/: digest.py  metrics.py
perfdigest/src/perfdigest/report_store/: discovery.py
perfdigest/src/perfdigest/server/: app.py  prompts.py  tools.py
perfdigest/tests/: conftest.py  test_contract.py  test_discovery.py  test_pri_reader.py
src/perfdigest/: __init__.py
src/perfdigest/adapters/: __init__.py  registry.py
src/perfdigest/adapters/cargo_diag/: backend.py  cargo_diag_reader.py  mapping.py
src/perfdigest/adapters/chrome_trace/: backend.py  mapping.py  trace_reader.py
src/perfdigest/adapters/clang_time_trace/: backend.py  mapping.py  time_trace_reader.py
src/perfdigest/adapters/cmake_profile/: __init__.py  backend.py  cmake_profile_reader.py  mapping.py
src/perfdigest/adapters/criterion/: __init__.py  backend.py  criterion_reader.py  mapping.py
src/perfdigest/adapters/gha_log/: __init__.py  backend.py  gha_log_reader.py  mapping.py
src/perfdigest/adapters/git_numstat/: __init__.py  backend.py  mapping.py  numstat_reader.py
src/perfdigest/adapters/linux_perf/: __init__.py  backend.py  mapping.py  perf_reader.py
src/perfdigest/adapters/metal/: __init__.py  backend.py  mapping.py  trace_reader.py
src/perfdigest/adapters/ninja_log/: __init__.py  backend.py  mapping.py  ninja_log_reader.py
src/perfdigest/adapters/nsight/: __init__.py  backend.py  csv_reader.py  mapping.py  pri_reader.py
src/perfdigest/adapters/ptxas/: backend.py  mapping.py  ptxas_reader.py
src/perfdigest/adapters/rocm/: __init__.py  backend.py  mapping.py  rocprof_reader.py
src/perfdigest/core/: __init__.py  backend.py  compare.py  digest.py  metrics.py
src/perfdigest/platform/: __init__.py  capabilities.py  detect.py  shell.py
src/perfdigest/report_store/: __init__.py  cache.py  discovery.py
src/perfdigest/server/: __init__.py  app.py  prompts.py  tools.py
test_script/: bench_main.cu  interfaces.h  kernels.cu  profile_run.ps1
tests/: conftest.py  test_backends.py  test_cache.py  test_cargo_diag.py  test_chrome_trace.py  test_ci_prev_green.py  test_clang_time_trace.py  test_cmake_profile.py  test_compare_summarize.py  test_criterion.py  test_gha_log.py  test_git_numstat.py  test_issue_hotfixes.py  test_mapping.py  test_measured_findings.py  test_ninja_log.py  test_platform.py  test_pri_reader.py  test_ptxas.py  test_registry.py
tests/fixtures/: amd_sample.rocprof-csv  cargo_build_error_sample.cargo-diag.jsonl  cargo_build_warnings_sample.cargo-diag.jsonl  cmake_profile_sample.cmake-profile.json  cpu_report_sample.perf-report.txt  cpu_stat_improved_sample.perf-stat.json  cpu_stat_paranoid_sample.perf-stat.json  cpu_stat_sample.perf-stat.json  gpu_codegen_multiarch_sample.ptxas.txt  gpu_codegen_sample.cu  gpu_codegen_sample.ptxas.txt  metal_sample.metal-json  ninja_log_sample.ninja_log  nvidia_sample.ncu-csv  repo_lab_renames_sample.numstat  repo_session_early_sample.numstat  repo_session_sample.numstat  template_heavy.cpp  template_heavy.ftime-trace.json  torch_compiled_train_sample.torch-trace.json  torch_sample.torch-trace.json
tests/fixtures/cargo_diag_ws/: Cargo.toml
tests/fixtures/cargo_diag_ws/mathapp/: Cargo.toml
tests/fixtures/cargo_diag_ws/mathapp/src/: main.rs  main.rs.error-variant
tests/fixtures/cargo_diag_ws/mathlib/: Cargo.toml
tests/fixtures/cargo_diag_ws/mathlib/src/: lib.rs
tests/fixtures/cmake_profile_sample/: CMakeLists.txt  helpers.cmake  util.c
tests/fixtures/criterion_sample/: Cargo.toml
tests/fixtures/criterion_sample/benches/: fib_bench.rs
tests/fixtures/criterion_sample/criterion/fib/fib_20/new/: estimates.json
tests/fixtures/criterion_sample/criterion/fib_plain/new/: estimates.json
tests/fixtures/criterion_sample/src/: lib.rs
tests/fixtures/ninja_log_sample/: a.c  b.c  build.ninja  c.c
