[project]
name = "perfdigest-mcp"
version = "1.0.0"
description = "Local MCP server that makes performance-profiler output (NVIDIA ncu, AMD rocprof, Linux perf, Apple Metal) token-efficient for LLM coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Hamza Usta" }]
keywords = ["mcp", "profiler", "cuda", "nsight", "rocm", "metal", "perf", "llm", "claude", "codex"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Benchmark",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.2",
]

[project.urls]
Repository = "https://github.com/onlyxItachi/PerfDigest-MCP"
Issues = "https://github.com/onlyxItachi/PerfDigest-MCP/issues"

[project.optional-dependencies]
# Backends. Most profilers are system CLIs whose text/JSON exports we parse in
# pure Python (no pip dep) — the real availability gate is runtime capability
# detection, not these extras. Only NVIDIA's native binary reader needs a wheel,
# and it has no macOS build (a Mac digests ncu via the pure-Python CSV path).
nvidia = ["ncu-report; sys_platform != 'darwin'"]
cuda = ["ncu-report; sys_platform != 'darwin'"]  # back-compat alias for `nvidia`
amd = []     # rocprof CSV — pure-Python reader
cpu = []     # linux perf — pure-Python reader
metal = []   # xctrace JSON export — pure-Python reader
all = ["ncu-report; sys_platform != 'darwin'"]
dev = ["pytest>=8"]

# `perfdigest-mcp` is the canonical command (matches the PyPI name, so
# `uvx perfdigest-mcp` works); `perfdigest` is kept as a short alias.
[project.scripts]
perfdigest-mcp = "perfdigest.server.app:main"
perfdigest = "perfdigest.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perfdigest"]
